[gd_scene load_steps=7 format=3 uid="uid://1mesbpw37hqp"]

[ext_resource type="Theme" uid="uid://cyua45ur0ijqo" path="res://Main.theme" id="1_cbrbr"]
[ext_resource type="Script" path="res://Scripts/Node Config Editor/Node_config_editor.gd" id="1_rhkbh"]
[ext_resource type="Script" path="res://Scripts/Node Config Editor/Template_node.gd" id="2_3lv1s"]
[ext_resource type="Texture2D" uid="uid://cawxywwrt8wr5" path="res://Assets/Icons/Arrow_upward.svg" id="3_v586t"]
[ext_resource type="Texture2D" uid="uid://cv0titm4w4jp6" path="res://Assets/Icons/Arrow_downward.svg" id="4_nrdyh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yk01j"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.192157, 0.192157, 0.192157, 1)

[node name="Node Config Editor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_cbrbr")

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rhkbh")

[node name="Editor" type="HSplitContainer" parent="TabContainer"]
layout_mode = 2

[node name="Control" type="GraphEdit" parent="TabContainer/Editor"]
layout_mode = 2
size_flags_horizontal = 3
show_menu = false

[node name="TemplateNode" type="GraphNode" parent="TabContainer/Editor/Control"]
custom_minimum_size = Vector2(137.44, 63.07)
layout_mode = 2
offset_left = 66.0
offset_top = 163.0
offset_right = 203.44
offset_bottom = 226.07
mouse_filter = 1
position_offset = Vector2(66, 163)
resizable = true
title = "Template Node"
script = ExtResource("2_3lv1s")

[node name="PanelContainer" type="PanelContainer" parent="TabContainer/Editor"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_yk01j")

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Editor/PanelContainer"]
custom_minimum_size = Vector2(260.72, 0)
layout_mode = 2

[node name="VSplitContainer" type="VSplitContainer" parent="TabContainer/Editor/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Editor/PanelContainer/VBoxContainer/VSplitContainer"]
layout_mode = 2

[node name="Name Input" type="LineEdit" parent="TabContainer/Editor/PanelContainer/VBoxContainer/VSplitContainer/VBoxContainer"]
custom_minimum_size = Vector2(162.85, 0)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Node Name"
caret_blink = true
caret_blink_interval = 0.5

[node name="List" type="ItemList" parent="TabContainer/Editor/PanelContainer/VBoxContainer/VSplitContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 141.56)
layout_mode = 2
select_mode = 1

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Editor/PanelContainer/VBoxContainer/VSplitContainer"]
custom_minimum_size = Vector2(330, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Editor/PanelContainer/VBoxContainer/VSplitContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Row Controls" type="HBoxContainer" parent="TabContainer/Editor/PanelContainer/VBoxContainer/VSplitContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="New Row" type="Button" parent="TabContainer/Editor/PanelContainer/VBoxContainer/VSplitContainer/ScrollContainer/VBoxContainer/Row Controls"]
layout_mode = 2
size_flags_horizontal = 3
text = "New Row"

[node name="Up" type="Button" parent="TabContainer/Editor/PanelContainer/VBoxContainer/VSplitContainer/ScrollContainer/VBoxContainer/Row Controls"]
visible = false
layout_mode = 2
icon = ExtResource("3_v586t")

[node name="Down" type="Button" parent="TabContainer/Editor/PanelContainer/VBoxContainer/VSplitContainer/ScrollContainer/VBoxContainer/Row Controls"]
visible = false
layout_mode = 2
icon = ExtResource("4_nrdyh")

[node name="Delete Row" type="Button" parent="TabContainer/Editor/PanelContainer/VBoxContainer/VSplitContainer/ScrollContainer/VBoxContainer/Row Controls"]
layout_mode = 2
size_flags_horizontal = 3
text = "Delete Row"

[node name="Row Settings" type="VBoxContainer" parent="TabContainer/Editor/PanelContainer/VBoxContainer/VSplitContainer/ScrollContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="TabContainer/Editor/PanelContainer/VBoxContainer/VSplitContainer/ScrollContainer/VBoxContainer/Row Settings"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Editor/PanelContainer/VBoxContainer/VSplitContainer/ScrollContainer/VBoxContainer/Row Settings"]
layout_mode = 2
size_flags_horizontal = 3
text = "Row Settings"
horizontal_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="TabContainer/Editor/PanelContainer/VBoxContainer/VSplitContainer/ScrollContainer/VBoxContainer/Row Settings"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Editor/PanelContainer/VBoxContainer/VSplitContainer/ScrollContainer/VBoxContainer/Row Settings/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Input"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="TabContainer/Editor/PanelContainer/VBoxContainer/VSplitContainer/ScrollContainer/VBoxContainer/Row Settings/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Output"
horizontal_alignment = 1

[node name="Options" type="HBoxContainer" parent="TabContainer/Editor/PanelContainer/VBoxContainer/VSplitContainer/ScrollContainer/VBoxContainer/Row Settings"]
layout_mode = 2

[node name="Input Option" type="OptionButton" parent="TabContainer/Editor/PanelContainer/VBoxContainer/VSplitContainer/ScrollContainer/VBoxContainer/Row Settings/Options"]
layout_mode = 2
size_flags_horizontal = 3
item_count = 5
selected = 0
popup/item_0/text = "None"
popup/item_0/id = 0
popup/item_1/text = "Value"
popup/item_1/id = 1
popup/item_2/text = "DMX Value"
popup/item_2/id = 2
popup/item_3/text = "Text"
popup/item_3/id = 3
popup/item_4/text = "Custom Object"
popup/item_4/id = 4

[node name="Output Option" type="OptionButton" parent="TabContainer/Editor/PanelContainer/VBoxContainer/VSplitContainer/ScrollContainer/VBoxContainer/Row Settings/Options"]
layout_mode = 2
size_flags_horizontal = 3
item_count = 5
selected = 0
popup/item_0/text = "None"
popup/item_0/id = 0
popup/item_1/text = "Value"
popup/item_1/id = 1
popup/item_2/text = "DMX Value"
popup/item_2/id = 2
popup/item_3/text = "Text"
popup/item_3/id = 3
popup/item_4/text = "Custom Object"
popup/item_4/id = 4

[node name="Names" type="HBoxContainer" parent="TabContainer/Editor/PanelContainer/VBoxContainer/VSplitContainer/ScrollContainer/VBoxContainer/Row Settings"]
layout_mode = 2

[node name="Input Name" type="LineEdit" parent="TabContainer/Editor/PanelContainer/VBoxContainer/VSplitContainer/ScrollContainer/VBoxContainer/Row Settings/Names"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Input Name"

[node name="Output Name" type="LineEdit" parent="TabContainer/Editor/PanelContainer/VBoxContainer/VSplitContainer/ScrollContainer/VBoxContainer/Row Settings/Names"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Output Name"

[node name="Colors" type="HBoxContainer" parent="TabContainer/Editor/PanelContainer/VBoxContainer/VSplitContainer/ScrollContainer/VBoxContainer/Row Settings"]
layout_mode = 2

[node name="Input Color" type="ColorPickerButton" parent="TabContainer/Editor/PanelContainer/VBoxContainer/VSplitContainer/ScrollContainer/VBoxContainer/Row Settings/Colors"]
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "Input Color"
color = Color(1, 1, 1, 1)

[node name="Output Color" type="ColorPickerButton" parent="TabContainer/Editor/PanelContainer/VBoxContainer/VSplitContainer/ScrollContainer/VBoxContainer/Row Settings/Colors"]
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "Input Color"
color = Color(1, 1, 1, 1)

[node name="Visibility" type="HBoxContainer" parent="TabContainer/Editor/PanelContainer/VBoxContainer/VSplitContainer/ScrollContainer/VBoxContainer/Row Settings"]
layout_mode = 2

[node name="Input Visable" type="Button" parent="TabContainer/Editor/PanelContainer/VBoxContainer/VSplitContainer/ScrollContainer/VBoxContainer/Row Settings/Visibility"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Show Input Box"

[node name="Slot Visibility" type="HBoxContainer" parent="TabContainer/Editor/PanelContainer/VBoxContainer/VSplitContainer/ScrollContainer/VBoxContainer/Row Settings"]
layout_mode = 2

[node name="Input Slot Visable" type="Button" parent="TabContainer/Editor/PanelContainer/VBoxContainer/VSplitContainer/ScrollContainer/VBoxContainer/Row Settings/Slot Visibility"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Show Input Slot"

[node name="Output Slot Visable" type="Button" parent="TabContainer/Editor/PanelContainer/VBoxContainer/VSplitContainer/ScrollContainer/VBoxContainer/Row Settings/Slot Visibility"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Show Output Slot"

[node name="File System Buttons" type="HBoxContainer" parent="TabContainer/Editor/PanelContainer/VBoxContainer/VSplitContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="TabContainer/Editor/PanelContainer/VBoxContainer/VSplitContainer/ScrollContainer/VBoxContainer/File System Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Save"

[node name="Button2" type="Button" parent="TabContainer/Editor/PanelContainer/VBoxContainer/VSplitContainer/ScrollContainer/VBoxContainer/File System Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Load"

[node name="Button3" type="Button" parent="TabContainer/Editor/PanelContainer/VBoxContainer/VSplitContainer/ScrollContainer/VBoxContainer/File System Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "New"

[node name="Code" type="Control" parent="TabContainer"]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Code"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Code/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 4

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Code/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="TabContainer/Code/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Open In External Editor"

[node name="CodeEdit" type="CodeEdit" parent="TabContainer/Code/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "extends GraphNode


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.

func _on_resize_request(new_minsize):
	size = new_minsize
	
# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass
"
highlight_all_occurrences = true
symbol_lookup_on_click = true
line_folding = true
gutters_draw_line_numbers = true
indent_automatic = true
auto_brace_completion_enabled = true
auto_brace_completion_highlight_matching = true

[connection signal="resize_request" from="TabContainer/Editor/Control/TemplateNode" to="TabContainer/Editor/Control/TemplateNode" method="_on_resize_request"]
[connection signal="text_changed" from="TabContainer/Editor/PanelContainer/VBoxContainer/VSplitContainer/VBoxContainer/Name Input" to="TabContainer" method="_on_name_input_text_changed"]
[connection signal="multi_selected" from="TabContainer/Editor/PanelContainer/VBoxContainer/VSplitContainer/VBoxContainer/List" to="TabContainer" method="_on_list_multi_selected"]
[connection signal="pressed" from="TabContainer/Editor/PanelContainer/VBoxContainer/VSplitContainer/ScrollContainer/VBoxContainer/Row Controls/New Row" to="TabContainer" method="_on_new_row_pressed"]
[connection signal="pressed" from="TabContainer/Editor/PanelContainer/VBoxContainer/VSplitContainer/ScrollContainer/VBoxContainer/Row Controls/Delete Row" to="TabContainer" method="_on_delete_row_pressed"]
[connection signal="item_selected" from="TabContainer/Editor/PanelContainer/VBoxContainer/VSplitContainer/ScrollContainer/VBoxContainer/Row Settings/Options/Input Option" to="TabContainer" method="_on_input_option_item_selected"]
[connection signal="item_selected" from="TabContainer/Editor/PanelContainer/VBoxContainer/VSplitContainer/ScrollContainer/VBoxContainer/Row Settings/Options/Output Option" to="TabContainer" method="_on_output_option_item_selected"]
[connection signal="text_changed" from="TabContainer/Editor/PanelContainer/VBoxContainer/VSplitContainer/ScrollContainer/VBoxContainer/Row Settings/Names/Input Name" to="TabContainer" method="_on_input_name_text_changed"]
[connection signal="text_changed" from="TabContainer/Editor/PanelContainer/VBoxContainer/VSplitContainer/ScrollContainer/VBoxContainer/Row Settings/Names/Output Name" to="TabContainer" method="_on_output_name_text_changed"]
[connection signal="color_changed" from="TabContainer/Editor/PanelContainer/VBoxContainer/VSplitContainer/ScrollContainer/VBoxContainer/Row Settings/Colors/Input Color" to="TabContainer" method="_on_input_color_color_changed"]
[connection signal="color_changed" from="TabContainer/Editor/PanelContainer/VBoxContainer/VSplitContainer/ScrollContainer/VBoxContainer/Row Settings/Colors/Output Color" to="TabContainer" method="_on_right_input_color_changed"]
[connection signal="toggled" from="TabContainer/Editor/PanelContainer/VBoxContainer/VSplitContainer/ScrollContainer/VBoxContainer/Row Settings/Visibility/Input Visable" to="TabContainer" method="_on_input_visable_toggled"]
[connection signal="toggled" from="TabContainer/Editor/PanelContainer/VBoxContainer/VSplitContainer/ScrollContainer/VBoxContainer/Row Settings/Slot Visibility/Input Slot Visable" to="TabContainer" method="_on_input_slot_visable_toggled"]
[connection signal="toggled" from="TabContainer/Editor/PanelContainer/VBoxContainer/VSplitContainer/ScrollContainer/VBoxContainer/Row Settings/Slot Visibility/Output Slot Visable" to="TabContainer" method="_on_output_slot_visable_toggled"]
